# cansat-2023-embedded-systems

./: .gitignore  Cargo.toml  assembler.py  main.cpp
TestCode/: SamETDCode  orientation.ino
TestCode/SamETDCode/: SamETDCode.ino
compile/: .cargo  Cargo.toml
compile/src/: main.rs
data_visualization/: 3D_plotting.py  add_post_ejection_data.py  extract_vertical_data_until_ejection.py  flight_simulation_data_launch_only.csv  flight_simulation_data_launch_only_vertical.csv  flight_simulation_data_launch_only_vertical_with_post_ejection_data.csv
documentation/: Import.md
documentation/.obsidian/: graph.json  workspace.json
documentation/Boilerplate/: Import.md  Initialize.md
documentation/Interfaces/: Clock.md
documentation/Main Loops/: Core One.md
documentation/Structures/: Communication Sturctures.md  ContainerMode.md  DeploymentState.md  FlightState.md  Telemetry Structure.md
documentation/System Overview/: Overview.md
main/: enums.h  main.ino  timing.cpp  timing.h
main.ino/: main.ino.ino
rocket_simulation/: Official Cansat Rocket.ork
src/: backup.rs  cansat2023arduino.ino  main.rs  sensors.rs
